before moving to typescript

--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
   "version": "",
   "devDependencies": {
     "request": "^2.81.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "express": "^4.15.4"
   }
 }
