--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/node": "^8.0.22",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
-    "html-minifier": "^3.5.3"
+    "html-minifier": "^3.5.3",
+    "moment": "^2.18.1"
   }
 }
