--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   },
   "dependencies": {
     "@types/node": "^8.0.22",
+    "ajv": "^5.2.2",
     "assert": "^1.4.1",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "html-minifier": "^3.5.3",
     "moment": "^2.18.1",
-    "mongodb": "^2.2.31"
+    "mongodb": "^2.2.31",
+    "util": "^0.10.3"
   }
 }
