--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
     "request": "^2.81.0"
   },
   "dependencies": {
+    "@types/express": "^4.11.0",
+    "@types/mongodb": "^2.2.18",
     "@types/node": "^8.0.22",
+    "@types/request": "^2.0.9",
     "ajv": "^5.2.2",
     "assert": "^1.4.1",
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.18.2",
     "express": "^4.15.4",
     "html-minifier": "^3.5.3",
     "moment": "^2.18.1",
     "mongodb": "^2.2.31",
     "util": "^0.10.3"
+  },
+  "scripts": {
+    "debug": "nodemon --inspect-brk server/server.js"
   }
 }
