--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,11 +6,16 @@
       "dom",
       "es2017"
     ],
-    "noImplicitThis": true,
     "sourceMap": true,
-    "inlineSourceMap": true,
-    "inlineSources": true,
+    "allowJs": true,
+    "moduleResolution": "node",
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": true,
     "strictNullChecks": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "noUnusedLocals": true,
     "types": [
       "node"
     ]
