--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "",
   "version": "",
-  "devDependencies": {
-    "request": "^2.81.0"
-  },
+  "devDependencies": {},
   "dependencies": {
     "@types/express": "^4.11.0",
     "@types/mongodb": "^2.2.18",
@@ -13,10 +11,9 @@
     "assert": "^1.4.1",
     "body-parser": "^1.18.2",
     "express": "^4.15.4",
-    "html-minifier": "^3.5.3",
     "moment": "^2.18.1",
     "mongodb": "^2.2.31",
-    "util": "^0.10.3"
+    "request": "^2.83.0"
   },
   "scripts": {
     "debug": "nodemon --inspect-brk server/server.js"
