--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "",
   "devDependencies": {},
   "dependencies": {
+    "@types/compression": "0.0.35",
     "@types/express": "^4.11.0",
     "@types/mongodb": "^2.2.18",
     "@types/node": "^8.0.22",
@@ -10,6 +11,7 @@
     "ajv": "^5.2.2",
     "assert": "^1.4.1",
     "body-parser": "^1.18.2",
+    "compression": "^1.7.1",
     "express": "^4.15.4",
     "moment": "^2.18.1",
     "mongodb": "^2.2.31",
