json, sockets, mods tests

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -16,7 +16,8 @@
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
     "types": [
-      "node"
+      "node",
+      "jest"
     ]
   }
 }
