--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "",
   "version": "",
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/jest": "^22.2.2",
+    "jest": "^22.4.3",
+    "ts-jest": "^22.4.2"
+  },
   "dependencies": {
     "@types/compression": "0.0.35",
     "@types/express": "^4.11.0",
@@ -20,6 +24,7 @@
     "request": "^2.83.0"
   },
   "scripts": {
+    "test": "jest --watchAll",
     "debug": "nodemon --watch 'server/*.js'  --inspect-brk server/server.js"
   }
 }
