--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,22 +2,17 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2017",
-      "lib": [
-      "es2017"
-    ],
-    "sourceMap": true,
-    "allowJs": true,
-    "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
+    "strict": true,
+    "skipLibCheck": false,
     "noUnusedLocals": true,
-    "types": [
-      "node",
-      "jest"
-    ]
-  }
+    "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true,
+    "types": ["node"],
+    "rootDir": "src",
+    "sourceMap": false,
+    "outDir": "dist"
+  },
+  "include": ["src/**/*"]
 }
